swan_AmazonFiles/objects/swan_AmazonFilesSettings__c/swan_AmazonFilesSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Amazon Files Settings</label>
</CustomObject>