swan_AmazonFiles/objects/swan_AmazonFilesSettings__c/fields/BucketName__c.field-meta.xml
<CustomField>
    <fullName>BucketName__c</fullName>
    <label>Bucket Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>