swan_AmazonFiles/objects/swan_AmazonFilesSettings__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>