swan_AmazonFiles/objects/swan_AmazonFilesSettings__c/fields/RoleARN__c.field-meta.xml
<CustomField>
    <fullName>RoleARN__c</fullName>
    <label>Role ARN</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>