swan_AmazonFiles/objects/swan_AmazonFilesSettings__c/fields/S3BucketARN__c.field-meta.xml
<CustomField>
    <fullName>S3BucketARN__c</fullName>
    <label>S3 Bucket ARN</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>